@@ -1,4 +1,7 @@
 
+Development version (next release)
+- Fixed a bug when using offsets in the direct version of the GEMM kernels
+
 Version 0.10.0
 - Updated to version 8.0 of the CLCudaAPI C++11 OpenCL header
 - Changed the enums in the C API to avoid potential name clashes with external code
